third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_range_fail.exp

Diagnostics:
error: syntax item restricted to spec contexts
  ┌─ tests/more-v1/parser/spec_parsing_range_fail.move:3:15
  │
3 │       let _ = 1 .. 2;
  │               ^^^^^^ `..` operator only allowed in specifications
